--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 196ab78
-	base = de5c578
-	trim = 
-	trimbase = 
+	base = 6dc6b86
+	trim = rclpy_message_converter
+	trimbase = de5c578
