--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 196ab78
-	base = f738b77
-	trim = 
-	trimbase = 
+	base = 9e5778a
+	trim = rclpy_message_converter_msgs
+	trimbase = f738b77
