--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/rclpy_message_converter_msgs
-	previous = 
-	base = 9e5778a
+	previous = 9e5778a
+	base = 1511472
 	trim = 
 	trimbase = 
