--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/rclpy_message_converter_msgs
-	previous = 
-	base = 36fef13
+	previous = 36fef13
+	base = 68aabb0
 	trim = 
 	trimbase = 
