--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/rclpy_message_converter
-	previous = 
-	base = 6dc6b86
+	previous = 6dc6b86
+	base = c8e4c8c
 	trim = 
 	trimbase = 
