--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/rclpy_message_converter
-	previous = 
-	base = 61990f8
+	previous = 61990f8
+	base = 76b15cf
 	trim = 
 	trimbase = 
