--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 196ab78
-	base = 83c3693
-	trim = 
-	trimbase = 
+	base = a9a504a
+	trim = rclpy_message_converter
+	trimbase = 83c3693
