--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 196ab78
-	base = ddc4bce
-	trim = 
-	trimbase = 
+	base = 12f9b20
+	trim = rclpy_message_converter_msgs
+	trimbase = ddc4bce
