--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/rclpy_message_converter_msgs
-	previous = 
-	base = 12f9b20
+	previous = 12f9b20
+	base = 806bd38
 	trim = 
 	trimbase = 
