--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/rclpy_message_converter_msgs
-	previous = 
-	base = 863ef75
+	previous = 863ef75
+	base = 2a40457
 	trim = 
 	trimbase = 
