--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/rclpy_message_converter
-	previous = 
-	base = a9a504a
+	previous = a9a504a
+	base = 593a317
 	trim = 
 	trimbase = 
