--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/rclpy_message_converter
-	previous = 
-	base = 2e55a1e
+	previous = 2e55a1e
+	base = 02f8d30
 	trim = 
 	trimbase = 
