--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/rclpy_message_converter
-	previous = 
-	base = 82fe268
+	previous = 82fe268
+	base = ec1bfed
 	trim = 
 	trimbase = 
