--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/rclpy_message_converter_msgs
-	previous = 
-	base = 13aab82
+	previous = 13aab82
+	base = 6ac0981
 	trim = 
 	trimbase = 
