--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 196ab78
-	base = 270c978
-	trim = 
-	trimbase = 
+	base = b206532
+	trim = rclpy_message_converter
+	trimbase = 270c978
