--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 196ab78
-	base = 1fdb36b
-	trim = 
-	trimbase = 
+	base = ab37872
+	trim = rclpy_message_converter_msgs
+	trimbase = 1fdb36b
