--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/rclpy_message_converter
-	previous = 
-	base = b206532
+	previous = b206532
+	base = d9981bb
 	trim = 
 	trimbase = 
