--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/rclpy_message_converter
-	previous = 
-	base = aceb7b1
+	previous = aceb7b1
+	base = 0baa035
 	trim = 
 	trimbase = 
