--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/rclpy_message_converter_msgs
-	previous = 
-	base = d80358a
+	previous = d80358a
+	base = 7fb502b
 	trim = 
 	trimbase = 
