--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/rclpy_message_converter
-	previous = 
-	base = 9e26120
+	previous = 9e26120
+	base = 1da5825
 	trim = 
 	trimbase = 
