--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/rclpy_message_converter_msgs
-	previous = 
-	base = 0a10726
+	previous = 0a10726
+	base = 8e7be63
 	trim = 
 	trimbase = 
