--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/rclpy_message_converter
-	previous = 
-	base = 203acdb
+	previous = 203acdb
+	base = bb39dcf
 	trim = 
 	trimbase = 
