--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/rclpy_message_converter_msgs
-	previous = 
-	base = 9549481
+	previous = 9549481
+	base = 771a9dd
 	trim = 
 	trimbase = 
