--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rclpy_message_converter_msgs
-	previous = 
-	base = 3094731
+	previous = 3094731
+	base = fd136ae
 	trim = 
 	trimbase = 
