--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rclpy_message_converter
-	previous = 
-	base = 391ed00
+	previous = 391ed00
+	base = 3d6c139
 	trim = 
 	trimbase = 
