--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b2173d5
-	base = be1bc3c
+	base = 326bab2
 	trim = rclpy_message_converter
-	trimbase = 
+	trimbase = be1bc3c
