--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b2173d5
-	base = 41bddb4
+	base = 5b20375
 	trim = rclpy_message_converter_msgs
-	trimbase = 
+	trimbase = 41bddb4
