--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="3">
   <name>rclpy_message_converter</name>
-  <version>2.0.0</version>
+  <version>2.0.1</version>
   <description>Converts between Python dictionaries and JSON to rclpy messages.</description>
   <maintainer email="martin.guenther@dfki.de">Martin Günther</maintainer>
   <license>Apache License 2.0</license>
@@ -16,10 +16,12 @@
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
+  <test_depend>geometry_msgs</test_depend>
   <test_depend>python3-pytest</test_depend>
   <test_depend>rclpy_message_converter_msgs</test_depend>
   <test_depend>std_msgs</test_depend>
   <test_depend>std_srvs</test_depend>
+  <test_depend>tf2_msgs</test_depend>
 
   <build_depend>builtin_interfaces</build_depend>
   <build_depend>rosidl_default_generators</build_depend>
