--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b2173d5
-	base = 2b51551
+	base = a6a690e
 	trim = rclpy_message_converter
-	trimbase = 
+	trimbase = 2b51551
