--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b2173d5
-	base = a8e0192
+	base = ec47d40
 	trim = rclpy_message_converter_msgs
-	trimbase = 
+	trimbase = a8e0192
