--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b2173d5
-	base = c2720e2
+	base = 69693cc
 	trim = rclpy_message_converter
-	trimbase = 
+	trimbase = c2720e2
