--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b2173d5
-	base = 336933d
+	base = 2b35dec
 	trim = rclpy_message_converter_msgs
-	trimbase = 
+	trimbase = 336933d
