Update rolling track to release the same version as the source distribution.

--- a/tracks.yaml
+++ b/tracks.yaml
@@ -102,4 +102,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/uos/rospy_message_converter.git
-    version: :{auto}
+    version: 2.0.1
+    version_saved: :{auto}
