--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e6bfc73
-	base = 146849d
-	trim = 
-	trimbase = 
+	base = 7fcc30f
+	trim = rclpy_message_converter_msgs
+	trimbase = 146849d
