--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e6bfc73
-	base = c3c3b6c
-	trim = 
-	trimbase = 
+	base = ad5975f
+	trim = rclpy_message_converter
+	trimbase = c3c3b6c
