--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclpy_message_converter
-	previous = 
-	base = 09bd89a
+	previous = 09bd89a
+	base = 7ccd61e
 	trim = 
 	trimbase = 
