--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rclpy_message_converter_msgs
-	previous = 
-	base = 7fcc30f
+	previous = 7fcc30f
+	base = f0e7aa9
 	trim = 
 	trimbase = 
