--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclpy_message_converter_msgs
-	previous = 
-	base = 8e385cb
+	previous = 8e385cb
+	base = 2d9702c
 	trim = 
 	trimbase = 
