--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclpy_message_converter_msgs
-	previous = 
-	base = bead4b1
+	previous = bead4b1
+	base = a62e7b2
 	trim = 
 	trimbase = 
