--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclpy_message_converter
-	previous = 
-	base = c3b84c7
+	previous = c3b84c7
+	base = 546ee70
 	trim = 
 	trimbase = 
