--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rclpy_message_converter_msgs
-	previous = 
-	base = a04ed3b
+	previous = a04ed3b
+	base = 90b4bad
 	trim = 
 	trimbase = 
