--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rclpy_message_converter
-	previous = 
-	base = ad5975f
+	previous = ad5975f
+	base = f35a78f
 	trim = 
 	trimbase = 
