--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rclpy_message_converter
-	previous = 
-	base = 82359bf
+	previous = 82359bf
+	base = a739e27
 	trim = 
 	trimbase = 
