--- a/tracks.yaml
+++ b/tracks.yaml
@@ -102,5 +102,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/uos/rospy_message_converter.git
-    version: 2.0.1
-    version_saved: :{auto}
+    version: :{auto}
