--- a/tracks.yaml
+++ b/tracks.yaml
@@ -102,7 +102,8 @@ tracks:
     ros_distro: iron
     vcs_type: git
     vcs_uri: https://github.com/uos/rospy_message_converter.git
-    version: :{auto}
+    version: 2.0.1
+    version_saved: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
