--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 32ed9ec
-	base = 2852d7b
+	base = b8d3eb8
 	trim = rclpy_message_converter
-	trimbase = 
+	trimbase = 2852d7b
