--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 32ed9ec
-	base = a6d1040
+	base = 209dea4
 	trim = rclpy_message_converter_msgs
-	trimbase = 
+	trimbase = a6d1040
