--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.1-2": ["Tue Mar 21 2023", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
+{"2.0.1-3": ["Thu Apr 20 2023", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.1-2": ["Tue Mar 21 2023", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
