--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b9f8b4f
-	base = f0d1140
-	trim = 
-	trimbase = 
+	base = f78fa9a
+	trim = rclpy_message_converter_msgs
+	trimbase = f0d1140
