--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = b9f8b4f
-	base = d3eb3a4
-	trim = 
-	trimbase = 
+	base = 37f6c0e
+	trim = rclpy_message_converter
+	trimbase = d3eb3a4
