--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rclpy_message_converter_msgs
-	previous = 
-	base = f78fa9a
+	previous = f78fa9a
+	base = e73e1cf
 	trim = 
 	trimbase = 
