--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclpy_message_converter
-	previous = 
-	base = f017229
+	previous = f017229
+	base = 156cb82
 	trim = 
 	trimbase = 
