--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclpy_message_converter
-	previous = 
-	base = e0d1616
+	previous = e0d1616
+	base = c0b7778
 	trim = 
 	trimbase = 
