--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclpy_message_converter_msgs
-	previous = 
-	base = 482c16d
+	previous = 482c16d
+	base = 9f759f5
 	trim = 
 	trimbase = 
