--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rclpy_message_converter
-	previous = 
-	base = 37f6c0e
+	previous = 37f6c0e
+	base = 9004d15
 	trim = 
 	trimbase = 
