--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rclpy_message_converter
-	previous = 
-	base = 5f63f78
+	previous = 5f63f78
+	base = 358a790
 	trim = 
 	trimbase = 
