--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rclpy_message_converter_msgs
-	previous = 
-	base = 5624903
+	previous = 5624903
+	base = 497ce36
 	trim = 
 	trimbase = 
