--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d1dc69a
-	base = 611c10e
+	base = 68ed7f2
 	trim = rclpy_message_converter_msgs
-	trimbase = 
+	trimbase = 611c10e
