--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = d1dc69a
-	base = 751afed
+	base = 5e7b6ea
 	trim = rclpy_message_converter
-	trimbase = 
+	trimbase = 751afed
