--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.1-3": ["Wed Mar 06 2024", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
+{"2.0.1-4": ["Fri Apr 19 2024", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.1-3": ["Wed Mar 06 2024", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
