--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,18 +38,7 @@ repos:
     hooks:
       - id: black
 
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.7.9
+  - repo: https://github.com/PyCQA/flake8.git
+    rev: 7.0.0
     hooks:
     - id: flake8
-
-  - repo: local
-    hooks:
-      - id: catkin_lint
-        name: catkin_lint
-        description: Check package.xml and cmake files
-        entry: catkin_lint .
-        language: system
-        always_run: true
-        pass_filenames: false
-        args: [ "--strict" ]
