--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 146e639
-	base = 4393f01
+	base = 5587c3c
 	trim = rclpy_message_converter
-	trimbase = 
+	trimbase = 4393f01
