--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 146e639
-	base = c666b9b
+	base = 62f2fd3
 	trim = rclpy_message_converter_msgs
-	trimbase = 
+	trimbase = c666b9b
