--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.1": ["Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.0": ["Martin G\u00fcnther", "martin.guenther@dfki.de"]}
+{"2.0.2": ["Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.1": ["Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.0": ["Martin G\u00fcnther", "martin.guenther@dfki.de"]}
