--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 146e639
-	base = cb23f88
+	base = 411f97b
 	trim = rclpy_message_converter
-	trimbase = 
+	trimbase = cb23f88
