--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 146e639
-	base = 8714c7a
+	base = 37028db
 	trim = rclpy_message_converter_msgs
-	trimbase = 
+	trimbase = 8714c7a
