Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.1-1": ["Mon Nov 14 2022", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.0-1": ["Mon Sep 12 2022", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
+{"2.0.2-1": ["Fri Apr 26 2024", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.1-1": ["Mon Nov 14 2022", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.0-1": ["Mon Sep 12 2022", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
