--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 146e639
-	base = 6bee683
+	base = 0b1d62e
 	trim = rclpy_message_converter
-	trimbase = 
+	trimbase = 6bee683
