--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 146e639
-	base = 32cae3f
+	base = ef192bd
 	trim = rclpy_message_converter_msgs
-	trimbase = 
+	trimbase = 32cae3f
