--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 146e639b5b00
-	base = 3fb7222a9083
+	base = b56b412e357c
 	trim = rclpy_message_converter_msgs
-	trimbase = 
+	trimbase = 3fb7222a9083
