--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 146e639b5b00
-	base = 7fc7d99606bd
+	base = a32f5fe28d82
 	trim = rclpy_message_converter
-	trimbase = 
+	trimbase = 7fc7d99606bd
