Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2.0.2-1": ["Fri Apr 26 2024", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.1-3": ["Wed Mar 06 2024", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
+{"2.0.2-2": ["Wed Apr 23 2025", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.2-1": ["Fri Apr 26 2024", "Martin G\u00fcnther", "martin.guenther@dfki.de"], "2.0.1-3": ["Wed Mar 06 2024", "Martin G\u00fcnther", "martin.guenther@dfki.de"]}
